--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "event-stream": "^4.0.1"
+    "event-stream": "^4.0.1",
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {
     "eslint": "^8.1.0"
